maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:61: error: not found: value d
        d = chercheMur()
        ^Escaper:62: error: not found: value d
       	for (i <- 0 to d-1) {droite();c=c+1}
                       ^Escaper:62: error: reassignment to val
       	for (i <- 0 to d-1) {droite();c=c+1}
                                       ^