maze.lessons.maze.pledge.PledgeMaze.scala.code
def aMurN():Boolean = {var b =false;var d = getDirection();setDirection(Direction.NORTH);b = estFaceMur();setDirection(d);return b}
                                                                      
def aMurD():Boolean = {var b =false;droite();b = estFaceMur();gauche();return b}
def aMurG():Boolean = {var b =false;gauche();b = estFaceMur();droite();return b}
def demiTour() {gauche();gauche()}
def auxaux():Int = {var d = 0
             if (estFaceMur()) {return 0}
             droite();if (estFaceMur()) {return 1}
             droite();if (estFaceMur()) {return 2}
             droite();if (estFaceMur()) {return 3}
             return -1
             }
def aux():Boolean ={avance();return auxaux() != -1}
 
def chercheMur():Int = {var d = 0;var e = 0;if (aux()) e=d 
                        d = d+1;droite();if (aux()) e=d
                        d = d+1;droite();if (aux()) e=d
                        d = d+1;droite();if (aux()) e=d
                        droite();return e
                 				}	





def garM(c:Int):(Int) = {
  if (aMurD()) {
    if (aMurG()) {
      if (estFaceMur()) {
        demiTour()
        return c+2
      }
      else {
        avance()
        return c 
      }
    } 
    else {
      if (estFaceMur()) {
        gauche()
        avance()
        return c+1
      }
      else {avance();return c}
    }
  }
  else {
     if (aMurG()) {
       if (estFaceMur()) {
         droite()
         avance()
         return c-1
       }
       else {
         avance()
         return c 
       }
     	}
    	else {
        d = chercheMur()
       	for (i <- 0 to d-1) {droite();c=c+1}
        avance()
        return c
      }
    }
  }

                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
                                               
var c = 0
var b = false
override def run() {
  while (getY()!=0) {
    c = 0
    b=false
    setDirection(Direction.NORTH)
    while (!estFaceMur()) {
      avance()
    	}
    c=garM(c)
    while (getY() !=0 && c!=0) {
      c=garM(c)
    	}
  }
  while (!estSurBiscuit()) {
    c=garM(c)
  	}
  prendBiscuit()
}